[project]
name = "task-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "kavlan-dev",email = "kazancevvlad572@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "task_tracker", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
task-cli = "task_tracker.main:main"